<resources>
    <string name="app_name">La patata</string>
    <string name="action_settings">Configuració</string>
    <string name="welcome_msg">"Benvingut/da a l'aplicació de la patata."</string>
    <!-- Strings used for fragments for navigation -->
    <string name="llista_patates_fragment_label">Llista Patates Fragment</string>
    <string name="cerca_patates_fragment_label">Cerca Patates Fragment</string>
    <string name="afegir_patata_fragment_label">Afegir Patates Fragment</string>
    <string name="resultat_patata_fragment_label">Resultat Patata Fragment</string>
    <string name="afegir">Afegir</string>
    <string name="tornar">Anar a la llista</string>
    <string name="cerca">Cercar</string>
    <string name="importarAudio">Importar Audio</string>
    <string name="importarImatge">Importar Imatge</string>
    <string name="importarXML">Importar XML</string>
    <string name="prompt_cerca">ID a cercar</string>
    <string name="prompt_afegirID">ID patata</string>
    <string name="playAudio">Reproduir audio</string>
    <string name="stopAudio">Parar audio</string>
    <string name="prompt_afegirTipus">Tipus de patata</string>
    <string name="prompt_afegirDesc">Descripcio de la patata</string>
    <string name="prompt_afegirSembrar">Data a sembrar</string>
    <string name="prompt_afegirRecollir">Data a recollir</string>
    <string name="prompt_afegirPreu">Preu de la patata</string>
    <string name="afegitCorrecte">Afegit correctament</string>
    <string name="idRepetit">"L'ID no es pot repetir!"</string>
    <string name="campsBlanc">No es poden deixar un o mes camps en blanc.</string>
    <string name="idNoTrobat">"L'ID no existeix!"</string>
    <string name="audioNoTrobat">No hi ha cap audio en aquesta patata!</string>
    <string name="audioReproduint">"Ja s'esta reproduint un audio!"</string>
    <string name="imatgeNoTrobada">"No s'ha trobat la imatge d'aquesta patata."</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Correu</string>
    <string name="prompt_password">Contrasenya</string>
    <string name="action_sign_in">Entrar o registrar-se</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">Benvingut/da!</string>
    <string name="invalid_username">Usuari incorrecte</string>
    <string name="invalid_password">La contrasenya ha de tenir >8 caracters</string>
    <string name="login_failed">Login fallit</string>
</resources>