<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LlistaPatatesFragment">

    <fragment
        android:id="@+id/LlistaPatatesFragment"
        android:name="dam2021.mp08.uf1.p1.GOMEZ_DANA.LlistaPatatesFragment"
        android:label="@string/llista_patates_fragment_label"
        tools:layout="@layout/fragment_llista_patates">

        <action
            android:id="@+id/action_LlistaPatates_to_CercaPatates"
            app:destination="@id/CercaPatatesFragment" />
        <action
            android:id="@+id/action_LlistaPatates_to_AfegirPatata"
            app:destination="@id/AfegirPatataFragment" />
    </fragment>
    <fragment
        android:id="@+id/CercaPatatesFragment"
        android:name="dam2021.mp08.uf1.p1.GOMEZ_DANA.CercaPatatesFragment"
        android:label="@string/cerca_patates_fragment_label"
        tools:layout="@layout/fragment_cerca_patates">

        <action
            android:id="@+id/action_CercaPatates_to_LlistaPatates"
            app:destination="@id/LlistaPatatesFragment" />
    </fragment>
    <fragment
        android:id="@+id/AfegirPatataFragment"
        android:name="dam2021.mp08.uf1.p1.GOMEZ_DANA.AfegirPatataFragment"
        android:label="@string/afegir_patata_fragment_label"
        tools:layout="@layout/fragment_afegir_patata">
        <action
            android:id="@+id/action_AfegirPatata_to_LlistaPatates"
            app:destination="@id/LlistaPatatesFragment" />
    </fragment>
    <fragment
        android:id="@+id/ResultatPatataFragment"
        android:name="dam2021.mp08.uf1.p1.GOMEZ_DANA.ResultatPatataFragment"
        android:label="@string/resultat_patata_fragment_label"
        tools:layout="@layout/fragment_resultat_patata">

    </fragment>
</navigation>